--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
+ 
   "dependencies": {
     "jodit-react": "^4.1.2",
     "react": "^18.3.1",
@@ -32,4 +34,5 @@
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
+
 }
