--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
- 
   "dependencies": {
+    "dompurify": "^3.1.6",
     "jodit-react": "^4.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,5 +33,4 @@
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
-
 }
