--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -3,14 +3,14 @@
         "version": 2,
         "builds": [
           {
-            "src": "server.js",
+            "src": "index.js",
             "use": "@vercel/node"
           }
         ],
         "rewrites": [
           {
             "source": "/api/(.*)",
-            "destination": "/server.js"
+            "destination": "/index.js"
           }
         ],
         "headers": [
