--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
 }
