--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,2 @@
-VITE_LOCAL_HOST = https://code-in-air.vercel.app
+# VITE_LOCAL_HOST = https://code-in-air.vercel.app
+VITE_LOCAL_HOST = http://localhost:3000
