--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,3 @@
 # VITE_LOCAL_HOST = https://code-in-air.vercel.app
-VITE_LOCAL_HOST = http://localhost:3000
+# VITE_LOCAL_HOST = http://localhost:3000
+VITE_LOCAL_HOST = https://codeinair.onrender.com
